--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,6 +1,6 @@
 
 # Datasource configuration
-spring.datasource.url=jdbc:postgresql://localhost:5432/webapi
+spring.datasource.url=jdbc:postgresql://localhost:5432/alumni
 spring.datasource.username=postgres
 spring.datasource.password=postgres
 # Hibernate behaviour
